--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,1 +1,9 @@
 buildPack: javascript
+pipelineConfig:
+  pipelines:
+    overrides:
+      - pipeline: release
+        name: jx-promote
+        step: 
+          image: gcr.io/jenkinsxio-labs-private/jx-promote:0.0.4
+          sh: jx-alpha-promote -b --all-auto --timeout 1h --version \$(cat ../../VERSION)
